accommodation-be/k8s/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: accommodation-ti
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accommodation-ti
  template:
    metadata:
      labels:
        app: accommodation-ti
    spec:
      containers:
        - name: springboot-container
          image: ${DOCKER_IMAGE_NAME}:${IMAGE_TAG}
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
