accommodation-be/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accommodation-ti-service
  namespace: default
spec:
  selector:
    app: accommodation-ti
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
